refactor: refatorando codigo do tratamento de excecao do bean validation